--- a/index..html
+++ b/index..html
@@ -9,7 +9,7 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
     <!--========== CSS ==========-->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./Restaurant Website Project/assets/css/styles.css">
 
     <!-- ScrollRevel CDN link  -->
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -28,9 +28,9 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="../Recipies/Apetizers.html" class="nav__link">Recipes</a></li>
-                    <li class="nav__item"><a href="../HTML files/signup.html" class="nav__link">Sign Up</a></li>
-                    <li class="nav__item"><a href="/Restaurant Website Project/assets/Tailwind/dist/index.html"
+                    <li class="nav__item"><a href="./Restaurant Website Project/assets/Recipies/Apetizers.html" class="nav__link">Recipes</a></li>
+                    <li class="nav__item"><a href="./Restaurant Website Project/assets/HTML files/signup.html" class="nav__link">Sign Up</a></li>
+                    <li class="nav__item"><a href="#"
                             class="nav__link">Contact us</a></li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
                     <a href="#menu" class="button">View Menu</a>
                 </div>
 
-                <img src="../images/cocktail-svgrepo-com.png" alt="" class="home__img">
+                <img src="./Restaurant Website Project/assets/images/cocktail-svgrepo-com.png" alt="" class="home__img">
             </div>
         </section>
 
@@ -66,7 +66,7 @@
                     <a href="#" class="button">Explore history</a>
                 </div>
 
-                <img src="../images/Burger.jpg" alt="" class="about__img">
+                <img src="./Restaurant Website Project/assets/images/Burger.jpg" alt="" class="about__img">
             </div>
         </section>
 
@@ -376,19 +376,19 @@
 
             <div class="menu__container bd-grid">
                 <div class="menu__content">
-                    <img src="../images/milk-tea-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/milk-tea-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">Appetizers</h3>
                     <span class="menu__detail" style="padding-top: 15px;">Making you extra hungry</span>
                 </div>
 
                 <div class="menu__content">
-                    <img src="../images/face-1-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/face-1-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">Main Courses</h3>
                     <span class="menu__detail" style="padding-top: 15px;">Makes you tummy full and happy.</span>
                 </div>
 
                 <div class="menu__content">
-                    <img src="../images/ice-cream-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/ice-cream-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">Desserts</h3>
                     <span class="menu__detail" style="padding-top: 15px;">Satiesfies your soul with the
                         sweetness.</span>
@@ -403,7 +403,7 @@
 
             <div class="menu__container bd-grid">
                 <div class="menu__content">
-                    <img src="../images/hamburger-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/hamburger-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">Cheese Burger</h3>
                     <span class="menu__detail">Spicy</span>
                     <span class="menu__preci">$5.00</span>
@@ -411,7 +411,7 @@
                 </div>
 
                 <div class="menu__content">
-                    <img src="../images/pizza-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/pizza-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">Margherita pizza</h3>
                     <span class="menu__detail">Delicious dish</span>
                     <span class="menu__preci">$12.00</span>
@@ -419,14 +419,14 @@
                 </div>
 
                 <div class="menu__content">
-                    <img src="../images/soup-pot-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/soup-pot-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">White Sauce Pasta</h3>
                     <span class="menu__detail">Cheesy</span>
                     <span class="menu__preci">$9.50</span>
                     <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                 </div>
                 <div class="menu__content">
-                    <img src="../images/chicken-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images//chicken-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">Fried Spicy chicken </h3>
                     <span class="menu__detail">Spicy</span>
                     <span class="menu__preci">$22.00</span>
@@ -434,7 +434,7 @@
                 </div>
 
                 <div class="menu__content">
-                    <img src="../images/western-food-1-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/western-food-1-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">Biryani</h3>
                     <span class="menu__detail">non-veg</span>
                     <span class="menu__preci">$12.00</span>
@@ -442,7 +442,7 @@
                 </div>
 
                 <div class="menu__content">
-                    <img src="../images/cake-1-svgrepo-com.png" alt="" class="menu__img">
+                    <img src="./Restaurant Website Project/assets/images/cake-1-svgrepo-com.png" alt="" class="menu__img">
                     <h3 class="menu__name" style="color: #c34b0f;">pastries</h3>
                     <span class="menu__detail">Sweet</span>
                     <span class="menu__preci">$9.50</span>
@@ -460,12 +460,12 @@
                     <p class="app__description">Find our application and download it, you can make delicious food on
                         your own by simply following the instructions on the app.</p>
                     <div class="app__stores">
-                        <a href="#"><img src="assets/images/app1.png" alt="" class="app__store" id="one"></a>
-                        <a href="#"><img src="assets/images/app2.png" alt="" class="app__store" id="two"></a>
+                        <a href="#"><img src="./Restaurant Website Project/assets/images/app1.png" alt="" class="app__store" id="one"></a>
+                        <a href="#"><img src="./Restaurant Website Project/assets/images/app2.png" alt="" class="app__store" id="two"></a>
                     </div>
                 </div>
 
-                <img src="../images/movil-app.png" alt="" class="app__img">
+                <img src="./Restaurant Website Project/assets/images/movil-app.png" alt="" class="app__img">
             </div>
         </section>
 
@@ -544,7 +544,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--========== MAIN JS ==========-->
-    <script src="../js/main.js"></script>
+    <script src="./Restaurant Website Project/assets/js/main.js"></script>
 </body>
 
 </html>
